# tic-tac-toe

./: Cargo.toml  README.md
src/: Main.rs  main.rs
src/game/: Game.rs  mod.rs
src/settings/: Settings.rs  mod.rs
tic_tac_toe/: __main__.py
tic_tac_toe/game/: Game.py
tic_tac_toe/settings/: Settings.py
