[package]

name = "tic-tac-toe"
version = "0.1.0"
authors = ["epilif3sotnas"]
edition = "2021"
description = "Tic Tac Toe game in Rust language."
readme = "README.md"
repository = "https://github.com/epilif3sotnas/tic-tac-toe"
license = "MIT"
license-file = "LICENSE"
keywords = ["tic-tac-toe", "game"]
categories = ["games"]
publish = false

[[bin]]
name = "tic-tac-toe"
path="src/Main.rs"